--- a/packages/SystemUI/res/values/flags.xml
+++ b/packages/SystemUI/res/values/flags.xml
@@ -22,16 +22,16 @@
     <bool name="flag_notification_pipeline2_rendering">false</bool>
     <bool name="flag_notif_updates">true</bool>
 
-    <bool name="flag_monet">false</bool>
+    <bool name="flag_monet">true</bool>
 
     <!-- b/171917882 -->
-    <bool name="flag_notification_twocolumn">false</bool>
+    <bool name="flag_notification_twocolumn">true</bool>
 
     <!-- AOD/Lockscreen alternate layout -->
     <bool name="flag_keyguard_layout">true</bool>
 
     <!-- People Tile flag -->
-    <bool name="flag_conversations">false</bool>
+    <bool name="flag_conversations">true</bool>
 
     <!-- The new animations to/from lockscreen and AOD! -->
     <bool name="flag_lockscreen_animations">true</bool>
@@ -41,17 +41,17 @@
     <bool name="flag_new_unlock_swipe_animation">true</bool>
 
     <!-- The shared-element transition between lockscreen smartspace and launcher smartspace. -->
-    <bool name="flag_smartspace_shared_element_transition">false</bool>
+    <bool name="flag_smartspace_shared_element_transition">true</bool>
 
     <bool name="flag_pm_lite">true</bool>
 
-    <bool name="flag_charging_ripple">false</bool>
+    <bool name="flag_charging_ripple">true</bool>
 
     <bool name="flag_ongoing_call_status_bar_chip">true</bool>
 
-    <bool name="flag_smartspace">false</bool>
+    <bool name="flag_smartspace">true</bool>
 
     <bool name="flag_smartspace_deduping">true</bool>
 
-    <bool name="flag_combined_status_bar_signal_icons">false</bool>
+    <bool name="flag_combined_status_bar_signal_icons">true</bool>
 </resources>
